# tauri-release

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  action.yml  tauri-release.example.toml
.github/workflows/: release-tags.yml  release.yml  standalone-executables.yml
examples/: nutrino-desktop.toml  nutrino-mobile.toml  tauri-release.toml
scripts/: sync-github-release-notes.sh  sync-release-notes.sh  validate-project.sh
src/: artifacts.rs  checksums.rs  cli.rs  config.rs  container.rs  context.rs  host.rs  main.rs  project.rs  util.rs
templates/: Containerfile.android  Containerfile.ios  Containerfile.linux  Containerfile.macos  Containerfile.macos-ios.md  Containerfile.windows  Containerfile.windows.md
