[package]
name = "tauri-release"
version = "0.1.20"
edition = "2021"
description = "Containerized release builder for Tauri desktop and mobile artifacts"
license = "AGPL-3.0-or-later"
repository = "https://github.com/verzly/tauri-release"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
ctrlc = "3.4"
glob = "0.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
walkdir = "2.5"

[[bin]]
name = "tauri-release"
path = "src/main.rs"

